--- a/package.json
+++ b/package.json
@@ -1,28 +1,17 @@
 {
-  "dependencies": {
-    "@discordjs/voice": "^0.16.0",
-    "axios": "^1.5.0",
-    "cowsay": "^1.5.0",
-    "discord-rpc": "^4.0.1",
-    "discord.js": "^14.13.0",
-    "dotenv": "^16.3.1",
-    "ffmpeg-static": "^5.2.0",
-    "mathjs": "^11.11.0",
-    "mongoose": "^7.5.3",
-    "weather-js": "^2.0.0",
-    "wikijs": "^6.4.1"
-  },
-  "devDependencies": {
-    "eslint": "^8.48.0"
-  },
-  "name": "fnord",
-  "version": "0.1.1",
-  "main": "./index.js",
+  "name": "fnord_public",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "Boifubá",
+  "author": "",
   "license": "ISC",
-  "description": "A Discord bot."
+  "dependencies": {
+    "discord": "^0.8.2",
+    "discord.js": "^14.13.0",
+    "dotenv": "^16.3.1"
+  }
 }
