--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "discord": "^0.8.2",
     "discord.js": "^14.13.0",
     "dotenv": "^16.3.1",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "path": "^0.12.7"
   }
 }
