--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "discord.js": "^14.13.0",
     "dotenv": "^16.3.1",
     "node-fetch": "^3.3.2",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "table-js": "^8.0.2"
   }
 }
