--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "discord": "^0.8.2",
     "discord.js": "^14.13.0",
     "dotenv": "^16.3.1",
+    "mongoose": "^8.0.2",
+    "moongoose": "^0.0.5",
     "node-fetch": "^3.3.2",
     "path": "^0.12.7",
     "table-js": "^8.0.2"
